# c-programming-course

./: README.md
.github/workflows/: build-and-lint.yml
CMake/: CMakeLists.txt  advanced_braces_balance.c  advanced_braces_balance.h  sorting_station.c  sorting_station.h
CMake/Stack/: stack.h
CompilationProcess/: braces_balance.c  find_substrings.c  zero_elements.c
Introduction/: main.c
LibrariesAndOptimizations/: README.md  bubble_sort.s  main.c
Lists/: cyclic_list_array.c  cyclic_list_array.h  list_array.c  list_array.h  rhyme.c  run.bat  sorted_list.c
Stack/: stack.c
StackAndQueue/: advanced_braces_balance.c  sorting_station.c
StackAndQueue/Stack/: stack.c  stack.h
StyleGuide/: array_permutation.c  fast_calculating.c  integer_division.c  lucky_tickets.c
Test #1/: fibonacci.c  max_digits_sum.c  selection_sort.c
Test #2/: binary_comparing.c  functional_queue.c
